<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/addons_layout_padding"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginStart="@dimen/side_menu_content_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/addons_image_margin"
        android:src="@drawable/empty"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxHeight="200.0dip"
        android:contentDescription="@null" />
    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center"
        android:id="@id/addons_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_stremio_tv_addons_title"
        android:textAlignment="center" />
    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="italic"
        android:textColor="?android:textColorSecondary"
        android:id="@id/addons_sub_title"
        android:padding="10.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_stremio_tv_addons_subtitle" />
    <Button
        android:textColor="@color/accent_button_text_color"
        android:id="@id/addons_btn_sync"
        android:paddingLeft="@dimen/button_padding_horizontal"
        android:paddingRight="@dimen/button_padding_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_stremio_tv_addons_sync_addons"
        android:drawablePadding="@dimen/button_icon_padding"
        android:backgroundTint="@color/accent_button_color"
        android:paddingHorizontal="@dimen/button_padding_horizontal" />
</LinearLayout>