<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    android:tag="layout/dialog_announcement_0"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:id="@id/background_with_image"
        android:tag="binding_1"
        android:background="@drawable/rounded_background"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginTop="@dimen/announcement_dialog_background_margin_image"
        app:layout_constraintBottom_toBottomOf="@id/description"
        app:layout_constraintTop_toTopOf="@id/image" />
    <View
        android:id="@id/background_no_image"
        android:tag="binding_2"
        android:background="@drawable/rounded_background"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginTop="@dimen/announcement_dialog_info_margin"
        app:layout_constraintBottom_toBottomOf="@id/description"
        app:layout_constraintTop_toTopOf="@id/image" />
    <ImageView
        android:id="@id/image"
        android:tag="binding_3"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/announcement_dialog_image_size"
        android:layout_marginTop="-20.0dip"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@id/description"
        android:padding="@dimen/dialog_large_padding"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/announcement_dialog_info_margin"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textAppearance="?android:textAppearance"
            android:gravity="center"
            android:tag="binding_4"
            android:paddingBottom="@dimen/dialog_medium_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity" />
        <TextView
            android:textAppearance="?android:textAppearance"
            android:textSize="@dimen/dialog_medium_text_size"
            android:textColor="?android:textColorSecondary"
            android:gravity="center"
            android:tag="binding_5"
            android:paddingBottom="@dimen/dialog_medium_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity" />
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:tag="binding_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:tag="binding_7"
                android:paddingLeft="@dimen/dialog_medium_padding"
                android:paddingRight="@dimen/dialog_medium_padding"
                android:layout_width="@dimen/announcement_dialog_qr_size"
                android:layout_height="@dimen/announcement_dialog_qr_size"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:paddingHorizontal="@dimen/dialog_medium_padding" />
            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/dialog_small_text_size"
                    android:layout_gravity="start"
                    android:paddingBottom="@dimen/dialog_medium_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_stremio_tv_announcement_qr_code"
                    android:includeFontPadding="false" />
                <TextView
                    android:textSize="@dimen/dialog_small_text_size"
                    android:textColor="@color/accent_color"
                    android:layout_gravity="center"
                    android:tag="binding_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:tag="binding_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:paddingLeft="@dimen/dialog_medium_padding"
                android:paddingRight="@dimen/dialog_medium_padding"
                android:layout_width="@dimen/announcement_dialog_addon_icon_size"
                android:layout_height="@dimen/announcement_dialog_addon_icon_size"
                android:src="@drawable/addons"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:paddingHorizontal="@dimen/dialog_medium_padding"
                app:tint="?defaultBrandColor" />
            <TextView
                android:tag="binding_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dialog_medium_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@color/accent_button_text_color"
                android:id="@id/btn_addon_install"
                android:tag="binding_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_install_addon"
                android:textAlignment="gravity"
                android:layout_marginEnd="10.0dip"
                android:backgroundTint="@color/accent_button_color" />
            <Button
                android:id="@id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_stremio_tv_announcement_close"
                android:textAlignment="gravity" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>